--- a/app/views/relations/complement_choices.html.haml
+++ b/app/views/relations/complement_choices.html.haml
@@ -1,4 +1,4 @@
-=toolbar
+=toolbar do
   -link :complement_choices_create
   -link :complement_choices_sort, {}, {:method=>:post}
   -link :complements_update, :id=>@complement.id
