git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@871 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/guide/about_us.html.haml
+++ b/app/views/guide/about_us.html.haml
@@ -1,4 +1,7 @@
 #about_us{:style=>'text-align: center; padding: 64px;'}
-  %p
-    =image_tag "logos.png"
-  =link_to "www.ekylibre.org", "http://www.ekylibre.org"
+  =link_to image_tag("logos.png"), "http://www.ekylibre.org"
+  %table.evalue
+    -for p in @properties
+      %tr
+        %td.label=p[0]
+        %td.value=p[1]
