git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@873 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/unvalidated_embankments.html.haml
+++ b/app/views/management/unvalidated_embankments.html.haml
@@ -1,22 +1,6 @@
 - if @embankments.size > 0
   - form_tag do
-    %table.dyta
-      %tr
-        %th= tc('created_on')
-        %th= tc('total_amount') 
-        %th= tc('payments_number')
-        %th= tc('bank_account')
-        %th= tc('validate')
-      -for @embankment in @embankments
-      -klass=cycle("odd","even")
-        %tr{:class=>klass+' root '}
-          %td= @embankment.created_on
-          %td= @embankment.amount
-          %td= @embankment.payments_number
-          %td= @embankment.bank_account.name
-          %td{:style=>'text-align:center'}
-            =check_box_tag "embankment[#{@embankment.id}]","#{@embankment.id}",true,:id=>"embankment_#{@embankment.id}" 
-
+    =dyta :unvalidated_embankments
     .actions
       =link_to tg(:previous), :action=>:index
       =submit_tag(tc('validate'), :action=>:unvalidated_embankments)
