git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@874 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/undelivered_sales.html.haml
+++ b/app/views/management/undelivered_sales.html.haml
@@ -31,7 +31,7 @@
               %td= lines.amount
               %td= lines.amount_with_taxes
               %td
-
+    =dyta :undelivered_sales
     .actions
       =link_to tg(:previous), :action=>:index
       =submit_tag(tc('deliver'), :action=>:undelivered_sales)
