--- a/app/views/guide/about_us.html.haml
+++ b/app/views/guide/about_us.html.haml
@@ -1,5 +1,5 @@
 #about_us{:style=>'text-align: center; padding: 64px;'}
-  =link_to image_tag("logos.png"), "http://www.ekylibre.org"
+  =link_to image_tag("ekylong.png"), "http://www.ekylibre.org"
   %table.evalue
     -for p in @properties
       %tr
