--- a/app/views/accountancy/synthesis.html.haml
+++ b/app/views/accountancy/synthesis.html.haml
@@ -9,213 +9,215 @@
 - capital_accounts = @balance.select {|account| account[:number].to_s.match /^1[^5]/}
 - stock_accounts = @balance.select {|account| account[:number].to_s.match /^15/}
 - debt_accounts = @balance.select {|account| account[:number].to_s.match /^4/ and account[:balance] >= 0}
-
+- cost_accounts = @balance.select {|account| account[:number].to_s.match /^(6)/}
+- finished_accounts = @balance.select {|account| account[:number].to_s.match /^7/}
 
 %table.dyta
   %tr{:align=>'center'}
     %th{:colspan=>3}=tc :active_balance_sheet 
     %th=tc :account_value 
-    %th=tc :account_value if @previous_balance													
+    %th=tc :account_value if session[:previous_financialyear]													
   %tr 
     %th{:rowspan => untangible_accounts.size+tangible_accounts.size+financial_accounts.size+1}=tc :account_fixed_assets
     %th{:rowspan => untangible_accounts.size}=tc  :account_untangible_fixed_assets
     %td=untangible_accounts.first[:name]
     %td=untangible_accounts.first[:balance].abs
-    %td=untangible_accounts.first[:previous_balance].abs if @previous_balance
+    %td=untangible_accounts.first[:previous_balance].abs if session[:previous_financialyear]
   - untangible_accounts.shift
   - untangible_accounts.each do |account|
     - attr = cycle("even","odd")  
     %tr{:class=>attr}
       %td=account[:name]
       %td=account[:balance].abs
-      %td=account[:previous_balance].abs if @previous_balance
+      %td=account[:previous_balance].abs if session[:previous_financialyear]
   %tr
     %th{:rowspan=> tangible_accounts.size}=tc :account_tangible_fixed_assets
     %td=tangible_accounts.first[:name]
     %td=tangible_accounts.first[:balance].abs
-    %td=tangible_accounts.first[:previous_balance].abs if @previous_balance
+    %td=tangible_accounts.first[:previous_balance].abs if session[:previous_financialyear]
   - tangible_accounts.shift
   - tangible_accounts.each do |account|
     - attr = cycle("even","odd")  
     %tr{:class=>attr}
       %td=account[:name]
       %td=account[:balance].abs
-      %td=account[:previous_balance].abs if @previous_balance
+      %td=account[:previous_balance].abs if session[:previous_financialyear]
   %tr
     %th{:rowspan=> financial_accounts.size}=tc :account_financial_assets        
     %td=financial_accounts.first[:name]
     %td=financial_accounts.first[:balance].abs
-    %td=financial_accounts.first[:previous_balance].abs if @previous_balance
+    %td=financial_accounts.first[:previous_balance].abs if session[:previous_financialyear]
   - financial_accounts.shift
   - financial_accounts.each do |account|
     - attr = cycle("even","odd")  
     %tr{:class=>attr}
       %td=account[:name]
       %td=account[:balance].abs
-      %td=account[:previous_balance].abs if @previous_balance
+      %td=account[:previous_balance].abs if session[:previous_financialyear]
   %tr
     %th
     %th=tc :active_fixed_sum 
     %th=@active_fixed_sum   
-
+    %th=@previous_active_fixed_sum if session[:previous_financialyear]   
 
   %tr 
     %th{:rowspan => inventory_accounts.size+claim_accounts.size+other_accounts.size}=tc :account_current_assets
     %th{:rowspan => inventory_accounts.size}=tc  :account_inventories_assets
     %td=inventory_accounts.first[:name]
     %td=inventory_accounts.first[:balance].abs
-    %td=inventory_accounts.first[:previous_balance].abs if @previous_balance
+    %td=inventory_accounts.first[:previous_balance].abs if session[:previous_financialyear]
   - inventory_accounts.shift
   - inventory_accounts.each do |account|
     - attr = cycle("even","odd")  
     %tr{:class=>attr}
       %td=account[:name]
       %td=account[:balance].abs
-      %td=account[:previous_balance].abs if @previous_balance
+      %td=account[:previous_balance].abs if session[:previous_financialyear]
   %tr
     %th{:rowspan => claim_accounts.size}=tc :account_claims_assets 
     %td=claim_accounts.first[:name]
     %td=claim_accounts.first[:balance].abs
-    %td=claim_accounts.first[:previous_balance].abs if @previous_balance
+    %td=claim_accounts.first[:previous_balance].abs if session[:previous_financialyear]
   - claim_accounts.shift
   - claim_accounts.each do |account| 
     - attr = cycle("even","odd") 
     %tr{:class=> attr} 
       %td=account[:name]
       %td=account[:balance].abs 
-      %td=account[:previous_balance].abs if @previous_balance 
+      %td=account[:previous_balance].abs if session[:previous_financialyear] 
   %tr
     %th{:rowspan => other_accounts.size}=tc :account_others_assets 
     %td=other_accounts.first[:name]
     %td=other_accounts.first[:balance].abs
-    %td=other_accounts.first[:previous_balance].abs if @previous_balance
+    %td=other_accounts.first[:previous_balance].abs if session[:previous_financialyear]
   - other_accounts.shift
   - other_accounts.each do |account|
     - attr = cycle("even","odd")  
     %tr{:class=> attr} 
       %td=account[:name] 
-      %td=account[:balance] 
-      %td=account[:previous_balance].abs if @previous_balance 
+      %td=account[:balance].abs 
+      %td=account[:previous_balance].abs if session[:previous_financialyear] 
   %tr
     %th{:rowspan => accrual_accounts.size+1, :colspan => 2}=tc :account_accruals
     %th=tc :active_current_sum
     %th=@active_current_sum  
+    %th=@previous_active_current_sum if session[:previous_financialyear]   
     %tr
       %td=accrual_accounts.first[:name]
       %td=accrual_accounts.first[:balance].abs
-      %td=accrual_accounts.first[:previous_balance].abs if @previous_balance
+      %td=accrual_accounts.first[:previous_balance].abs if session[:previous_financialyear]
     - accrual_accounts.shift
     - accrual_accounts.each do |account|
       - attr = cycle("even","odd")   
       %tr{:class=> attr} 
         %td=account[:name]
         %td=account[:balance].abs 
-        %td=account[:previous_balance].abs if @previous_balance 
+        %td=account[:previous_balance].abs if session[:previous_financialyear] 
   %tr
     %th
     %th
     %th=tc :active_sum 
     %th=@active_current_sum+@active_fixed_sum
-   
+    %th=@previous_active_current_sum+@previous_active_fixed_sum if session[:previous_financialyear]   
   %tr
   %tr{:align=>'center'}
     %th{:colspan=>3}=tc :passive_balance_sheet
     %th=tc :account_value 
-    %th=tc :account_value if @previous_balance
+    %th=tc :account_value if session[:previous_financialyear]
 
   %tr
     %th{:rowspan => capital_accounts.size+1, :colspan=>2}=tc :account_equity
     %td=capital_accounts.first[:name]
-    %td=capital_accounts.first[:balance].abs
-    %td=capital_accounts.first[:previous_balance].abs if @previous_balance
+    %td=(capital_accounts.first[:balance] >= 0 ? capital_accounts.first[:balance] : capital_accounts.first[:balance].abs) 
+    %td=capital_accounts.first[:previous_balance].abs if session[:previous_financialyear]
   - capital_accounts.shift
   - capital_accounts.each do |account|
     - attr = cycle("even","odd")
     %tr{:class=> attr} 
       %td=account[:name] 
-      %td=account[:balance] 
-      %td=account[:previous_balance].abs if @previous_balance 
+      %td=(account[:balance] >= 0 ? account[:balance] : account[:balance].abs)
+      %td=account[:previous_balance].abs if session[:previous_financialyear] 
   %tr
     %th=tc :passive_capital_sum 
     %th=@passive_capital_sum   
-
+    %th=@previous_passive_capital_sum if session[:previous_financialyear]   
   %tr
     %th{:rowspan => stock_accounts.size+1, :colspan=>2}=tc :account_provision
     %td=stock_accounts.first[:name]
     %td=stock_accounts.first[:balance].abs
-    %td=stock_accounts.first[:previous_balance].abs if @previous_balance
+    %td=stock_accounts.first[:previous_balance].abs if session[:previous_financialyear]
   - stock_accounts.shift
   - stock_accounts.each do |account|
     - attr = cycle("even","odd")
     %tr{:class=> attr} 
       %td=account[:name] 
       %td=account[:balance] 
-      %td=account[:previous_balance].abs if @previous_balance 
+      %td=account[:previous_balance].abs if session[:previous_financialyear] 
   %tr
     %th=tc :passive_stock_sum
     %th=@passive_stock_sum
-  
+    %th=@previous_passive_stock_sum if session[:previous_financialyear]   
   %tr
     %th{:rowspan => debt_accounts.size+1, :colspan=>2}=tc :account_debt
     %td=debt_accounts.first[:name]
     %td=debt_accounts.first[:balance].abs
-    %td=debt_accounts.first[:previous_balance].abs if @previous_balance
+    %td=debt_accounts.first[:previous_balance].abs if session[:previous_financialyear]
   - debt_accounts.shift
   - debt_accounts.each do |account|
     - attr = cycle("even","odd")
     %tr{:class=> attr} 
       %td=account[:name] 
       %td=account[:balance] 
-      %td=account[:previous_balance].abs if @previous_balance 
+      %td=account[:previous_balance].abs if session[:previous_financialyear] 
   %tr
     %th=tc :passive_debt_sum
     %th=@passive_debt_sum
-  
+    %th=@previous_passive_debt_sum if session[:previous_financialyear]   
   %tr
     %th
     %th
     %th=tc :passive_sum 
     %th=@passive_debt_sum+@passive_stock_sum+@passive_capital_sum
+    %th=@previous_passive_debt_sum+@previous_passive_stock_sum+@previous_passive_capital_sum if session[:previous_financialyear]
 
 
-<!-- %br -->
-<!-- = "COMPTE DE RESULTAT" -->
-<!-- %table.dyta -->
-<!--   %tr -->
-<!--     %th=tc :cost_income_statement  -->
-<!--     %th="" -->
-<!--   %tr -->
-<!--     %table.dyta -->
-<!--       %tr -->
-<!--         %th=tc :running_cost -->
-<!--         %th="" -->
-<!--       - @balance.select {|account| account[:number].to_s.match /^(6)/}.each do |account| -->
-<!--         - attr = cycle("even","odd")   -->
-<!--         %tr{:class=> attr} -->
-<!--           %td=account[:name] -->
-<!--           %td=account[:balance].abs  -->
-<!--       %tr -->
-<!--         %th=tc :total -->
-<!--         %th=@previous_cost_sum -->
 
-<!--   %tr -->
-<!--     %th=tc :finished_income_statement -->
-<!--     %th="" -->
-<!--   %tr -->
-<!--     %table.dyta -->
-<!--       %tr -->
-<!--         %th=tc :running_finished -->
-<!--         %th="" -->
-<!--       - @balance.select {|account| account[:number].to_s.match /^7/}.each do |account| -->
-<!--         - attr = cycle("even","odd")   -->
-<!--         %tr{:class=> attr} -->
-<!--           %td=account[:name] -->
-<!--           %td=account[:balance].abs -->
-<!--       %tr -->
-<!--         %th=tc :total -->
-<!--         %th=@previous_finished_sum	 -->
-
-<!--   %tr -->
-<!--     %th=tc :result -->
-<!--     %th=@result -->
-
+= "COMPTE DE RESULTAT"
+%table.dyta
+  %tr
+    %th{:rowspan =>cost_accounts.size+1}=tc :running_cost
+    %td=cost_accounts.first[:name]
+    %td=cost_accounts.first[:balance].abs
+    %td=cost_accounts.first[:previous_balance].abs if session[:previous_financialyear]
+  - cost_accounts.each do |account|
+    - attr = cycle("even","odd")  
+    %tr{:class=> attr} 
+      %td=account[:name]
+      %td=account[:balance].abs 
+      %td=account[:previous_balance].abs if session[:previous_financialyear]
+  %tr
+    %th
+    %th=tc :cost_sum
+    %th=@cost_sum.abs
+    %th=@previous_cost_sum.abs if session[:previous_financialyear]
+  %tr 
+    %th{:rowspan =>finished_accounts.size+1}=tc :running_finished
+    %td=finished_accounts.first[:name]
+    %td=finished_accounts.first[:balance].abs
+    %td=finished_accounts.first[:previous_balance].abs if session[:previous_financialyear]
+  - finished_accounts.each do |account|
+    - attr = cycle("even","odd") 
+    %tr{:class=> attr} 
+      %td=account[:name]
+      %td=account[:balance].abs
+      %td=account[:previous_balance].abs if session[:previous_financialyear]
+  %tr
+    %th
+    %th=tc :finished_sum
+    %th=@finished_sum
+    %th=@previous_finished_sum.abs if session[:previous_financialyear]
+  %tr 
+    %th=tc :result 
+    %th
+    %th=@result 
+    %th=@previous_result if session[:previous_financialyear]
