--- a/app/views/management/index.html.haml
+++ b/app/views/management/index.html.haml
@@ -1,5 +1,5 @@
 .menu.indicator
-  %h2= tc('indicator')
+  %h2=tg('indicator')
   %ul
     =li_link_to tc('nb_sales', :count=>@deliveries.size), :action=>:undelivered_sales
     =li_link_to tc('nb_purchases', :count=>@purchases.size), :action=>:unreceived_purchases
@@ -10,4 +10,3 @@
     %h2= tc('low_stocks')
     .stocks 
       =render :partial=>"stock_indicator"
-=menu_index
