--- a/app/views/relations/index.html.haml
+++ b/app/views/relations/index.html.haml
@@ -1,1 +1,4 @@
-=menu_index
+.menu.indicator
+  %h2= tg('indicator')
+  %ul
+    =li_link_to tc('nb_entities',:count=>@entities.size), :controller=>:relations, :action=>:entities
