--- a/app/views/resources/index.html.haml
+++ b/app/views/resources/index.html.haml
@@ -1,1 +1,4 @@
-=menu_index
+.menu.indicator
+  %h2= tg('indicator')
+  %ul
+    =li_link_to tc('nb_employees',:count=>@employees.size), :action=>:employees
