git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@884 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_stock_indicator.html.haml
+++ b/app/views/management/_stock_indicator.html.haml
@@ -1,24 +1,1 @@
-- form_tag do
-  %table.dyta
-    %tr
-      %th= tc 'name'
-      - if @stock_locations.size > 1
-        %th= tc 'location'
-      %th= tc 'weight'
-      %th= tc 'stock_max'
-      %th= tc 'stock_min'
-      %th= tc 'critic_stock_min'
-      %th= tc 'current_virtual_quantity'
-      %th= tc 'current_real_quantity'
-    -for @product_stock in @product_stocks
-    -klass=cycle("odd","even")+" "+@product_stock.state
-      %tr{:class=>klass}
-        %td= link_to @product_stock.product.name, :action=>:products_display, :id=>@product_stock.product_id
-        - if @stock_locations.size > 1
-          %td= @product_stock.location.name
-        %td= @product_stock.product.weight
-        %td= @product_stock.quantity_max
-        %td= @product_stock.quantity_min
-        %td= @product_stock.critic_quantity_min
-        %td= @product_stock.current_virtual_quantity
-        %td= @product_stock.current_real_quantity
+=dyta :critic_product_stocks
