--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,6 +30,6 @@
             =yield
             .end{:style=>'height:1px'}
         #legals{:flexy=>'true'}=#link_to 'www.ekylibre.org', 'http://www.ekylibre.org'
-      #help{:flex=>3, :style=>''+(session[:help] ? "" : "display:none")}
+      #help{:flex=>3, :style=>(session[:help] ? "" : "display:none")}
         = render :partial=>'help/search' if session[:help]
  
