git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@909 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_products_form.html.haml
+++ b/app/views/management/_products_form.html.haml
@@ -17,6 +17,7 @@
   - f.field :product, :subscription_period
 =formalize(:id=>:sub_numbers) do |f|
   - f.field :product, :subscription_numbers
+  - f.field :product, :actual_number
 =formalize do |f|
   - f.field :product, :supply_method, :field=>:radio, :choices=>Product.supply_methods
   - f.field :product, :active
