--- a/app/views/management/_sale_order_lines_form.html.haml
+++ b/app/views/management/_sale_order_lines_form.html.haml
@@ -4,8 +4,22 @@
   - f.field :sale_order_line, :price_id, :choices=>Price.find(:all,:conditions=>{:company_id=>@current_company.id,:entity_id=>@current_company.entity_id, :active=>true, :category_id=>@sale_order.client.category.id}).collect{|x| [x.product.name+" "+x.amount.to_s+" "+x.currency.code, x.id]}, :new=>{:action=>:prices_create, :mode=>:sales}
   - f.field :sale_order_line, :location_id, :choices=>@stock_locations.collect{|x| [x.name, x.id]} if @stock_locations.size > 1
   - f.field :sale_order_line, :quantity
+
+#subscription_number{:style=>'display:none'}
+  =formalize do |f|
+    - f.field :subscription, :numbers
+
+#subscription_date{:style=>'display:none'}
+  =formalize do |f|
+    - f.field :subscription, :started_on
+    - f.field :subscription, :finished_on
+ 
 -if @current_user.free_price
   =formalize do |f|
     -f.title :free_price
     -f.field :sale_order_line, :price_amount
     -f.field :sale_order_line, :tax_id, :choices=>@current_company.taxes.find_all_by_deleted(false).collect{|x| [x.name, x.id]}
+
+
+=observe_field("sale_order_line_price_id", :url=>{:action => :subscription_find}, :frequency => 0.25, :with=>"sale_order_line_price_id")
+
