git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@910 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -59,5 +59,4 @@
 
 =observe_field "entity_client", :function=>"displayFields();", :frequency => 0.25
 =observe_field "entity_supplier", :function=>"displayFields();", :frequency => 0.25
-=render :partial=>"coordinates_form"
-
+=render :partial=>"coordinates_form", :locals => {:company => @current_company}
