--- a/app/views/relations/_coordinates_form.html.haml
+++ b/app/views/relations/_coordinates_form.html.haml
@@ -6,6 +6,7 @@
   -f.field :contact, :line_4_number
   -f.field :contact, :line_4_street
   -f.field :contact, :line_5
+  -f.field :contact, :area_id, :choices=>company.areas.find(:all,:order=>"name ASC").collect {|c| [c.postcode+'-'+c.city.name, c.id]}
   -f.field :contact, :line_6_code
   -f.field :contact, :line_6_city
   -f.field :contact, :country, :choices=>countries, :options=>{:include_blank=>true}
@@ -15,3 +16,13 @@
   -f.field :contact, :mobile
   -f.field :contact, :email   
   -f.field :contact, :website
+
+
+
+
+=observe_field "contact_area_id", :frequency => 0.25, :function =>remote_function(:url => {:action => 'areas_find'}, :with => "'area=' + escape(value)")
+
+
+
+
+
