git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@911 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -10,6 +10,7 @@
   -f.field :entity, :supplier
   -f.title :details
   -f.field :entity, :country,:choices=>countries
+  -f.field :entity, :siren
   -f.field :entity, :vat_number
   -f.field :entity, :excise
   -f.field :entity, :code
