--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -1,30 +1,32 @@
 =toolbar do
   -link :entities_update, {:controller=>:relations, :id=>@company.entity_id}
-  -link :update
+  -link :configure
   -link :backup
   -link :restore
-
-.detail
-  = evalue @company , :name 
-  = evalue @company , :siren
-  = evalue @company , :code
-  =# evalue tc(:establishments_number  ) , @company.establishments.size, :url=>{:action=>:establishments}
-  =# evalue tc(:departments_number ) , @company.departments.size, :url=>{:action=>:departments}
-  =# evalue tc(:users_number ) ,@users.size, :url=>{:action=>:users}
 
 %h2= tc :users
 =toolbar do
   -link :users_create
 =dyta :users
+
+
 %h2= tc(:roles)
 =toolbar do
   -link :roles_create
 =dyta :roles
-%h2= tc :establishments
-=toolbar do
-  -link :establishments_create
-=dyta :establishments
-%h2= tc :departments
-=toolbar do
-  -link :departments_create
-=dyta :departments
+
+
+-# %h2= tc :establishments
+-# =toolbar do
+-#   -link :establishments_create
+-# =dyta :establishments
+
+
+-# %h2= tc :departments
+-# =toolbar do
+-#   -link :departments_create
+-# =dyta :departments
+
+
+%h2= tc :sequences
+=dyta :sequences
