git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@920 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/configure.html.haml
+++ b/app/views/company/configure.html.haml
@@ -4,7 +4,7 @@
     -f.title tc(:general)
     -f.field :company, :name
     -f.field :company, :code
-    -f.field :company, :entity_id
+    -#f.field :company, :entity_id, :readonly=>true
     -for name, options in @tree
       -f.title tc(name)
       -for key in options.keys.sort
