git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@921 67a09383-3dfa-4221-8551-890bac9c277c

--- a/public/stylesheets/dyta.css
+++ b/public/stylesheets/dyta.css
@@ -29,6 +29,8 @@ table.dyta tr      td.float   { text-align: right; }
 table.dyta tr      td.integer { text-align: right; }
 table.dyta tr      td.date { text-align: center; }
 table.dyta tr      td.web { text-align: center; }
+table.dyta tr      td.code { font-family: monospace; }
+table.dyta tr      td.code a { font-family: monospace; }
 /*table.dyta th .sort { widths: 100%; }
 table.dyta th .sort div { widths: 100%; }*/
 table.dyta th a.sort { display:block; width: 100%; text-decoration:none; padding: 1px; color: #336; }
