--- a/app/views/company/_users_form.html.haml
+++ b/app/views/company/_users_form.html.haml
@@ -4,6 +4,7 @@
   -f.field :user, :last_name
   -f.field :user, :first_name
   -f.field :user, :email
+  -f.field :user, :language_id, :choices=>@current_company.languages.collect{|x| [x.native_name, x.id]}
   -f.field :user, :name
   -f.field :user, :password
   -f.field :user, :password_confirmation
