--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -151,6 +151,7 @@ table.formalize td .example span { color: #4A5; }
 table.formalize td .hint         { color: #600;  background:#FDE; padding:2px;}
 table.formalize td .hint span    { color: #B54; }
 table.formalize tr.title th { padding: 16px 8px 2px; border-bottom: 0px dotted #002; color: #002; font-size:13px; border-bottom: 1px solid #CCC; font-weight:bold;}
+table.formalize td.input .code { font-family: monospace; }
 /*
 table.formalize tr.odd  td { background: #E5ECF6;}
 table.formalize tr.even td { background: #F0F8FF;}
