--- a/app/views/management/_products_form.html.haml
+++ b/app/views/management/_products_form.html.haml
@@ -13,11 +13,10 @@
   - f.field :product, :price
   - f.field :product, :nature, :field=>:radio, :choices=>Product.natures
   - f.field :product, :service_coeff, :html_options=>{ :id=>:service_coeff }
-=formalize(:id=>:sub_period) do |f|
-  - f.field :product, :subscription_period
-=formalize(:id=>:sub_numbers) do |f|
-  - f.field :product, :subscription_numbers
-  - f.field :product, :actual_number
+=formalize(:id=>:subscriptions) do |f|
+  - f.field :product, :subscription_nature_id,  :choices=>@current_company.subscription_natures.collect{|x| [x.name, x.id]}, :new=>{:action=>:subscription_natures_create} 
+  - f.field :product, :duration
+
 =formalize do |f|
   - f.field :product, :supply_method, :field=>:radio, :choices=>Product.supply_methods
   - f.field :product, :active
@@ -47,14 +46,10 @@
 
 :javascript
   function subscription(){
-    if($('product_nature_sub_date').checked)
-      $('sub_period').show();
+    if($('product_nature_subscrip').checked)
+      $('subscriptions').show();
     else
-      $('sub_period').hide();
-    if($('product_nature_sub_numb').checked)
-      $('sub_numbers').show();
-    else
-      $('sub_numbers').hide();
+      $('subscriptions').hide();
   }
   subscription();
 
@@ -68,6 +63,5 @@
 
 =observe_field("product_manage_stocks", :frequency=>0.25, :function=> "stocks();")
 
-=observe_field("product_nature_sub_date", :frequency=>0.25, :function=>"subscription();")
 
-=observe_field("product_nature_sub_numb", :frequency=>0.25, :function=>"subscription();")
+=observe_field("product_nature_subscrip", :frequency=>0.25, :function=>"subscription();")
