--- a/app/views/management/_sale_order_lines_form.html.haml
+++ b/app/views/management/_sale_order_lines_form.html.haml
@@ -1,5 +1,6 @@
 = formalize do |f|
   - f.error :sale_order_line
+  - f.error :subscription
   - f.title :infos
   - f.field :sale_order_line, :price_id, :choices=>Price.find(:all,:conditions=>{:company_id=>@current_company.id,:entity_id=>@current_company.entity_id, :active=>true, :category_id=>@sale_order.client.category.id}).collect{|x| [x.product.name+" "+x.amount.to_s+" "+x.currency.code, x.id]}, :new=>{:action=>:prices_create, :mode=>:sales}
   - f.field :sale_order_line, :location_id, :choices=>@stock_locations.collect{|x| [x.name, x.id]} if @stock_locations.size > 1
@@ -8,11 +9,13 @@
 #subscription_number{:style=>'display:none'}
   =formalize do |f|
     - f.field :subscription, :numbers
+    - f.field :subscription, :contact_id, :choices=>@current_company.contacts.find_all_by_active(true).collect{|x| [x.entity.full_name+" "+x.address, x.id]}
 
 #subscription_date{:style=>'display:none'}
   =formalize do |f|
     - f.field :subscription, :started_on
     - f.field :subscription, :finished_on
+    - f.field :subscription, :contact_id, :choices=>@current_company.contacts.find_all_by_active(true).collect{|x| [x.entity.full_name+" "+x.address, x.id]}
  
 -if @current_user.free_price
   =formalize do |f|
